Use git-flow's next release module

--- a/dist.ini
+++ b/dist.ini
@@ -16,14 +16,9 @@ copyright_year   = 2011
 ;repository.url = http://github.com/USERNAME/PROJNAME.git
 repository.type = git
 
-[GitFlow::NextVersion]
-first_version  = 0.001
-version_regexp = ^v(.+)$
-
 [AutoPrereqs]
 [PodWeaver]
 [PkgVersion]
-[NextRelease]
 [ReadmeMarkdownFromPod]
 [InstallGuide]
 
@@ -32,3 +27,9 @@ Moose = 0
 
 [PodCoverageTests]
 [PodSyntaxTests]
+
+[GitFlow::NextVersion]
+[GitFlow::NextRelease]
+[Git::Check]
+[Git::Commit]
+commit_msg = Bump up v%v
