--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,11 @@ license = Perl_5
 copyright_holder = Keedi Kim
 copyright_year   = 2011
 
-[@Basic]
-;[@Filter]
-;-bundle = @Basic
-;-remove = UploadToCPAN
+;[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = UploadToCPAN
+[FakeRelease]
 
 [MetaResources]
 ;homepage       =
