Use dzil's git-flow plugin bundle

--- a/dist.ini
+++ b/dist.ini
@@ -29,8 +29,4 @@ Moose = 0
 [PodCoverageTests]
 [PodSyntaxTests]
 
-[GitFlow::NextVersion]
-[GitFlow::NextRelease]
-[Git::Check]
-[Git::Commit]
-commit_msg = Bump up v%v
+[@GitFlow]
